# project_FunctionalCuration

./: CMakeLists.txt  SConscript  Summary.wiki
apps/: CMakeLists.txt
apps/src/: .gitignore  FunctionalCuration.cpp  SedmlRunner.cpp
gui/: QueueClient.py  QueueServer.py  init-script-ubuntu
gui/FCS/: .classpath  (+1 more)
papers/: .gitignore  JC slides for schools talk.pptx  Name resolution.odg  VPH-FET roadmap chapter.doc  VPH2012 abstract.docx  VPH2012 draft abstract.docx  overall_schematic.odg
src/: AbstractSystemWithOutputs.cpp  AbstractSystemWithOutputs.hpp  AbstractTemplatedSystemWithOutputs.cpp  AbstractTemplatedSystemWithOutputs.hpp  ExceptionSet.hpp  NdArray.cpp  NdArray.hpp  NullDeleter.cpp  NullDeleter.hpp  Print.hpp  VectorStreaming.hpp
test/: CMakeLists.txt  TestAccessingStateVector.hpp  TestAdvancedModelInterface.hpp  TestArrayFileReader.hpp  TestCellModelTests.hpp  TestClamping.hpp  TestCombinedSimulation.hpp  TestCoreProtocolLanguage.hpp  TestDealingWithVoltageClamps.hpp  TestEnvironment.hpp  TestExceptionSet.hpp  TestFunctionalCurationLiteratePaper.hpp  TestFunctionalCurationPaper.hpp  TestIcalProtocol.hpp  TestMathmlEvaluation.hpp  TestModelStateCollection.hpp  TestNdArray.hpp  TestNestedProtocols.hpp  TestNightlyProtocols.hpp  TestOneStepSimulation.hpp  TestOptionalVariables.hpp  TestParallelLoops.hpp  TestProtocolFileFinder.hpp  TestProtocolParser.hpp  TestReproducibility.hpp  TestRunningAllProtocols.hpp  TestS1S2Protocol.hpp  TestSimpleProtocol.hpp  TestSimulationAndOntologyEnvironments.hpp  TestSimulationEnvironments.hpp  TestSteadyPacingProtocol.hpp  TestSteppers.hpp  TestWhileLoops.hpp
(+541 files in other folders)
